--- a/src/Pages/AddGame/Components/AddGameTags/Components/PriceReleaseDate/ReleaseDate/ReleaseDate.module.css
+++ b/src/Pages/AddGame/Components/AddGameTags/Components/PriceReleaseDate/ReleaseDate/ReleaseDate.module.css
@@ -4,7 +4,7 @@
   align-items: center;
   width: 100%;
 }
-.DateContainer {
+.dateContainer {
   display: flex;
   align-items: center;
 }
@@ -26,13 +26,19 @@
     margin-top: 10px;
   }
 }
-@media screen and (max-width: 396px) {
-  .releaseDate {
+@media screen and (max-width: 454px) {
+  .releaseDate,
+  .dateContainer {
     display: flex;
     flex-direction: column;
+    align-items: start;
     width: 100%;
+  }
+  .releaseDate > p {
+    margin-bottom: 10px;
   }
   .releaseComponent {
     margin-bottom: 10px;
+    margin-left: 0px;
   }
 }
