--- a/src/Shared/FileUploadButton/FileUploadButton.module.css
+++ b/src/Shared/FileUploadButton/FileUploadButton.module.css
@@ -10,7 +10,7 @@
   width: 100%;
   height: 100%;
   border: 2px solid transparent;
-  padding: 20px 40px 20px 10px;
+  padding: 20px 40px 18px 10px;
   text-align: left;
   position: relative;
   font-size: 1rem;
@@ -38,6 +38,7 @@
   text-overflow: ellipsis;
   color: rgb(173, 173, 173);
   line-height: 20px;
+  padding-top: 2px;
 }
 #errorColor {
   color: #cc2a24;
@@ -54,7 +55,6 @@
 
 .selected {
   opacity: 1;
-  padding-top: 2px;
 }
 
 .label {
@@ -76,6 +76,18 @@
 
 #active {
   color: rgb(2, 99, 224);
+}
+
+.uploadImage {
+  height: 20px;
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  translate: 0 -50%;
+}
+
+.uploadImage img {
+  height: 100%;
 }
 
 .focused {
