--- a/src/Pages/Dashboard/Components/AddGame/Components/AddGameBanner/CoverImageVideoContainer/CoverImageVideoContainer.module.css
+++ b/src/Pages/Dashboard/Components/AddGame/Components/AddGameBanner/CoverImageVideoContainer/CoverImageVideoContainer.module.css
@@ -22,7 +22,6 @@
   text-overflow: ellipsis;
   color: rgb(173, 173, 173);
   line-height: 20px;
-  padding-top: 2px;
 }
 
 .label {
@@ -90,7 +89,7 @@
   width: 100%;
   height: 100%;
   border: none;
-  padding: 20px 40px 18px 10px;
+  padding: 25px 40px 15px 10px;
   text-align: left;
   position: relative;
   font-size: 1rem;
@@ -102,20 +101,20 @@
 }
 
 .uploadImage {
-  height: 20px;
+  height: 28px;
   position: absolute;
   right: 10px;
   top: 50%;
   translate: 0 -50%;
 }
 
-.uploadImage img {
+.uploadImage svg {
+  width: 100%;
   height: 100%;
 }
 
 .selected {
   opacity: 1;
-  padding-top: 2px;
 }
 .focusBorder {
   border: 2px solid rgba(1, 81, 185, 0.733);
