--- a/src/Shared/FileUploadButton/FileUploadButton.module.css
+++ b/src/Shared/FileUploadButton/FileUploadButton.module.css
@@ -10,7 +10,7 @@
   width: 100%;
   height: 100%;
   border: 2px solid transparent;
-  padding: 20px 40px 18px 10px;
+  padding: 25px 40px 15px 10px;
   text-align: left;
   position: relative;
   font-size: 1rem;
@@ -38,19 +38,9 @@
   text-overflow: ellipsis;
   color: rgb(173, 173, 173);
   line-height: 20px;
-  padding-top: 2px;
 }
 #errorColor {
   color: #cc2a24;
-}
-.uploadImage {
-  height: 20px;
-  position: absolute;
-  right: 10px;
-}
-
-.uploadImage img {
-  height: 100%;
 }
 
 .selected {
@@ -79,14 +69,15 @@
 }
 
 .uploadImage {
-  height: 20px;
+  height: 28px;
   position: absolute;
   right: 10px;
   top: 50%;
   translate: 0 -50%;
 }
 
-.uploadImage img {
+.uploadImage svg {
+  width: 100%;
   height: 100%;
 }
 
