--- a/src/Pages/MainContent/Pages/IndividualGame/Components/IndividualGameDetails/Components/IndividualGameReviewSection/Components/IndividualGameTakeReview/Components/IndividualGameWriteReview/Components/IndividualGameReviewTextField/IndividualGameReviewTextField.module.css
+++ b/src/Pages/MainContent/Pages/IndividualGame/Components/IndividualGameDetails/Components/IndividualGameReviewSection/Components/IndividualGameTakeReview/Components/IndividualGameWriteReview/Components/IndividualGameReviewTextField/IndividualGameReviewTextField.module.css
@@ -12,6 +12,28 @@
   background-color: #121212;
   color: #b1b1b1;
 }
+.description::-webkit-scrollbar {
+  width: 8px;
+}
+
+.description::-webkit-scrollbar-track {
+  background: rgb(37, 37, 37);
+}
+
+.description::-webkit-scrollbar-thumb {
+  background: #474747;
+  border-radius: 5px;
+  opacity: 0;
+}
+
+.description::-webkit-scrollbar-thumb:hover {
+  background: rgb(82, 82, 82);
+  opacity: 0;
+}
+
+.description::-webkit-scrollbar-thumb:active {
+  background: rgb(114, 114, 114);
+}
 .description:focus {
   outline: none;
 }
