(initgame) review view more button fixed

--- a/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameDetails/Components/IndiGameReviewSection/Components/IndiGameShowReview/Components/IndiGameViewMoreButton/IndiGameViewMoreButton.module.css
+++ b/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameDetails/Components/IndiGameReviewSection/Components/IndiGameShowReview/Components/IndiGameViewMoreButton/IndiGameViewMoreButton.module.css
@@ -8,9 +8,12 @@
 .individualGameViewMoreButton button {
   background-color: rgb(119, 119, 119);
   border: none;
+  position: relative;
   padding: 20px 30px;
   border-radius: 4px;
-  transition: background-color 200ms, color 200ms;
+  transition:
+    background-color 200ms,
+    color 200ms;
   cursor: pointer;
 }
 
