--- a/src/Pages/Dashboard/Components/DashboardBody/DashboardBody/DashboardBody.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/DashboardBody/DashboardBody.module.css
@@ -1,3 +1,8 @@
+.dashboardBodyContainer {
+  width: 100%;
+  overflow-y: auto;
+  padding: 1rem 0;
+}
 .dashboardBody {
   width: 75vw;
   max-width: 1600px;
@@ -5,5 +10,29 @@
   flex-direction: column;
   align-items: center;
   margin: 0 auto;
+  padding-right: 1rem;
+}
+
+.dashboardBodyContainer::-webkit-scrollbar {
+  width: 8px;
+}
+
+.dashboardBodyContainer::-webkit-scrollbar-track {
+  background: #121212;
+}
+
+.dashboardBodyContainer::-webkit-scrollbar-thumb {
+  background: #474747;
+  border-radius: 5px;
+  opacity: 0;
+}
+
+.dashboardBodyContainer::-webkit-scrollbar-thumb:hover {
+  background: rgb(82, 82, 82);
+  opacity: 0;
+}
+
+.dashboardBodyContainer::-webkit-scrollbar-thumb:active {
+  background: rgb(114, 114, 114);
 }
 
