--- a/src/Pages/Dashboard/Components/Drawer/Drawer/Drawer.module.css
+++ b/src/Pages/Dashboard/Components/Drawer/Drawer/Drawer.module.css
@@ -5,7 +5,8 @@
   flex-direction: column;
   align-items: center;
   padding: 0 20px;
-  background-color: #222222;
+  background-color: #18181c;
+  padding-top: 1rem;
 }
 
 @media (max-width: 1023px) and (min-width: 766px) {
