--- a/src/Pages/Dashboard/Components/Drawer/Drawer/Drawer.module.css
+++ b/src/Pages/Dashboard/Components/Drawer/Drawer/Drawer.module.css
@@ -3,12 +3,13 @@
   max-width: 534px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  padding: 0 20px;
+  align-items: start;
+  padding: 1rem 30px;
   background-color: #18181c;
-  padding-top: 1rem;
 }
-
+.outerOptionContainer {
+  list-style-type: none;
+}
 @media (max-width: 1023px) and (min-width: 766px) {
   .drawer {
   }
