--- a/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameDetails/Components/IndiGameDescription/IndiGameTextDescription/IndiGameTextDescription.module.css
+++ b/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameDetails/Components/IndiGameDescription/IndiGameTextDescription/IndiGameTextDescription.module.css
@@ -36,11 +36,9 @@
 .showHideButtonContainer {
   width: 100%;
   height: 50px;
-  position: relative;
 }
 
 .showHideButton {
-  position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -55,10 +53,22 @@
   cursor: pointer;
 }
 
-.downArrow {
-  width: 23px;
-  scale: 0.5;
+.rotateArrowContainer {
+  width: 1rem;
+  height: 100%;
+  margin-left: 5px;
+  position: relative;
+}
+
+.rotateArrow {
+  width: 100%;
+  height: 1rem;
+  position: absolute;
+  scale: 0.7;
   rotate: 180deg;
+  left: 50%;
+  top: 50%;
+  translate: -50% -50%;
   transform: rotateY(180deg);
 }
 
