--- a/src/Shared/SelectionField/SelectionField.module.css
+++ b/src/Shared/SelectionField/SelectionField.module.css
@@ -164,8 +164,8 @@
   height: 12px;
   position: absolute;
   right: 10px;
-  bottom: 60%;
-  translate: 0 50%;
+  top: 50%;
+  translate: 0 -50%;
 }
 @media screen and (max-width: 768px) {
   .label {
