--- a/src/Pages/MainContent/MainContent/MainContent.module.css
+++ b/src/Pages/MainContent/MainContent/MainContent.module.css
@@ -1,5 +1,5 @@
 .main {
-  width: 75vw;
+  width: 75%;
   max-width: 1600px;
   display: flex;
   flex-direction: column;
@@ -9,12 +9,12 @@
 
 @media (max-width: 1023px) and (min-width: 766px) {
   .main {
-    width: 97vw;
+    width: 97%;
   }
 }
 
 @media only screen and (max-width: 768px) {
   .main {
-    width: 98vw;
+    width: 98%;
   }
 }
