--- a/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameDetailAside/Components/IndiGameAsideHeader/IndiGameAsideHeader.module.css
+++ b/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameDetailAside/Components/IndiGameAsideHeader/IndiGameAsideHeader.module.css
@@ -7,8 +7,47 @@
   object-fit: cover;
 }
 .name {
-  font-size: 22px;
+  font-size: 2rem;
+  font-weight: 400;
 }
 .price {
   margin: 10px 0;
+}
+
+@media screen and (max-width: 1600px) and (min-width: 1200px) {
+  .imageContainer {
+    padding: 15px;
+    margin-bottom: 15px;
+  }
+  .name {
+    font-size: 1.5rem;
+  }
+  .price {
+    margin: 8px 0;
+  }
+}
+@media screen and (max-width: 1200px) and (min-width: 900px) {
+  .imageContainer {
+    padding: 10px;
+    margin-bottom: 0;
+  }
+  .name {
+    font-size: 1.2rem;
+  }
+  .price {
+    margin: 6px 0;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .imageContainer {
+    padding: 5px;
+    margin-bottom: 0;
+  }
+  .name {
+    font-size: 1rem;
+  }
+  .price {
+    margin: 4px 0;
+  }
 }
