--- a/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameDetailAside/IndiGameDetailAside/IndiGameDetailAside.module.css
+++ b/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameDetailAside/IndiGameDetailAside/IndiGameDetailAside.module.css
@@ -1,12 +1,19 @@
 .individualGameDetailAside {
   width: 30%;
-  padding: 20px 0 0 5%;
+  padding: 20px 0 0 2rem;
 }
 .asideContainer {
   position: sticky;
   top: 100px;
 }
+
 @media (max-width: 1023px) {
+  .individualGameDetailAside {
+    padding-left: 10px;
+  }
+}
+
+@media (max-width: 768px) {
   .individualGameDetailAside {
     width: 100%;
     position: static;
