--- a/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameDetails/Components/IndiGameDescription/IndiGameTextDescription/IndiGameTextDescription.module.css
+++ b/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameDetails/Components/IndiGameDescription/IndiGameTextDescription/IndiGameTextDescription.module.css
@@ -72,28 +72,23 @@
   transform: rotateY(180deg);
 }
 
-.show {
+.darkShadow {
   position: absolute;
-  top: -100px;
+  left: 0;
   height: 100px;
   width: 100%;
   background: linear-gradient(#12121200, #121212);
-  opacity: 1;
   transition:
     opacity 300ms,
     top 300ms;
   z-index: 1;
 }
+.show {
+  top: -100px;
+  opacity: 1;
+}
 
 .hide {
-  position: absolute;
   top: 0px;
-  height: 100px;
-  width: 100%;
-  background: linear-gradient(#12121200, #121212);
   opacity: 0;
-  transition:
-    opacity 3000ms,
-    top 3000ms;
-  z-index: 1;
 }
