--- a/src/Pages/MainContent/Pages/IndiGame/IndiGame/IndiGame.module.css
+++ b/src/Pages/MainContent/Pages/IndiGame/IndiGame/IndiGame.module.css
@@ -2,3 +2,15 @@
   width: 100%;
   display: flex;
 }
+
+@media (max-width: 1023px) and (min-width: 769px) {
+  .individualGame {
+    gap: 20px;
+  }
+}
+
+@media (max-width: 768px) {
+  .individualGame {
+    flex-direction: column-reverse;
+  }
+}
