--- a/src/Shared/SecondNavbar/Components/SecondNavSearchField/SecondNavSearchField.module.css
+++ b/src/Shared/SecondNavbar/Components/SecondNavSearchField/SecondNavSearchField.module.css
@@ -6,6 +6,7 @@
   padding: 0px 10px;
   max-width: 250px;
   transition: background-color 300ms;
+  border: none;
   height: 40px;
   z-index: 1;
 }
@@ -19,7 +20,9 @@
   width: 100%;
   color: rgba(255, 255, 255, 0.5);
   padding-left: 5px;
-  transition: background-color 300ms, color 300ms;
+  transition:
+    background-color 300ms,
+    color 300ms;
 }
 .searchField input::placeholder {
   color: rgb(255, 255, 255, 0.5);
@@ -56,9 +59,7 @@
   .searchField {
     background-color: transparent;
     max-width: none;
-    position: absolute;
-    left: -10px;
-    margin-left: 10px;
+    left: 0px;
     transition: all 300ms;
     z-index: 2;
   }
@@ -71,6 +72,9 @@
     z-index: 3;
   }
   #hide {
-    width: 25px;
+    width: 45px;
+  }
+  #hide input {
+    opacity: 0;
   }
 }
