--- a/src/Pages/MainContent/Pages/Discover/Discover/Discover.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Discover/Discover.module.css
@@ -1,6 +1,8 @@
 .discover {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  z-index: 0;
 }
+
