--- a/src/Pages/Dashboard/Components/Drawer/Components/DrawerOptions/DrawerOptions.module.css
+++ b/src/Pages/Dashboard/Components/Drawer/Components/DrawerOptions/DrawerOptions.module.css
@@ -12,10 +12,24 @@
 
 .outerOption {
   padding: 0.5rem 1rem;
+  display: flex;
+  align-items: center;
+}
+
+.iconContainer {
+  width: 1rem;
+  height: 100%;
+  margin-right: 1rem;
+}
+
+.iconContainer svg {
+  width: 100%;
+  height: 100%;
+  fill: rgb(196, 196, 196);
 }
 
 .innerOption {
-  padding: 0.5rem 2rem;
+  padding: 0.5rem 3rem;
 }
 
 .outerOption,
