--- a/src/Pages/Dashboard/Components/Drawer/Components/DrawerOptions/DrawerOptions.module.css
+++ b/src/Pages/Dashboard/Components/Drawer/Components/DrawerOptions/DrawerOptions.module.css
@@ -11,15 +11,17 @@
 }
 
 .outerOption {
-  padding: 0.5rem 1rem;
+  padding: 0.6rem 0 0.6rem 0;
   display: flex;
   align-items: center;
 }
 
 .iconContainer {
-  width: 1rem;
+  width: 1.2rem;
   height: 100%;
-  margin-right: 1rem;
+  margin: 0 1rem;
+  display: flex;
+  align-items: center;
 }
 
 .iconContainer svg {
