--- a/src/Pages/Dashboard/Components/Drawer/Drawer/Drawer.module.css
+++ b/src/Pages/Dashboard/Components/Drawer/Drawer/Drawer.module.css
@@ -1,18 +1,35 @@
-.drawer {
+.drawerContainer {
+  position: relative;
   width: 100%;
   max-width: 240px;
   height: calc(100vh - 72px);
+}
+
+.drawer {
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: start;
   padding: 1rem 0;
   background-color: #18181c;
   overflow-y: auto;
+  overflow-x: visible;
+  position: relative;
 }
 .optionContainer {
   list-style-type: none;
   width: 100%;
 }
+
+.collapseButton {
+  width: 2rem;
+  height: 2rem;
+  position: absolute;
+  top: 1rem;
+  left: calc(100% - 1rem);
+}
+
 @media (max-width: 1023px) and (min-width: 766px) {
   .drawer {
   }
