--- a/src/Pages/Dashboard/Components/Drawer/Drawer/Drawer.module.css
+++ b/src/Pages/Dashboard/Components/Drawer/Drawer/Drawer.module.css
@@ -35,11 +35,11 @@
 }
 
 .expandedPosition {
-  left: calc(100% - 1rem);
+  right: -1rem;
 }
 
 .collapsePosition {
-  left: 100%;
+  right: 0.65rem;
 }
 
 .collapseButton {
@@ -47,7 +47,56 @@
   height: 2rem;
   position: absolute;
   top: 1rem;
-  transition: left 300ms linear;
+  transition: right 300ms linear;
+  cursor: pointer;
+  background-color: rgba(255, 255, 255, 0.2);
+  border: none;
+  border-radius: 50%;
+  box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.5);
+}
+.arrowBtn {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.arrowBtn::before {
+  content: '';
+  position: absolute;
+  top: 12px;
+  transform-origin: center;
+  translate: 0 -2px;
+  width: 50%;
+  height: 2px;
+  background-image: linear-gradient(to right, #8200ff, #df00ff);
+  border-radius: 0.5rem;
+  rotate: 45deg;
+  transition: rotate 300ms linear;
+}
+
+.arrowBtn::after {
+  content: '';
+  position: absolute;
+  transform-origin: center;
+  top: 22px;
+  width: 50%;
+  height: 2px;
+  translate: 0 -2px;
+  background-image: linear-gradient(to right, #8200ff, #df00ff);
+  rotate: -45deg;
+  border-radius: 0.5rem;
+  transition: rotate 300ms linear;
+}
+
+.collapsePosition .arrowBtn::before {
+  rotate: -45deg;
+  background-image: linear-gradient(to left, #8200ff, #df00ff);
+}
+.collapsePosition .arrowBtn::after {
+  rotate: 45deg;
+  background-image: linear-gradient(to left, #8200ff, #df00ff);
 }
 
 @media (max-width: 1023px) and (min-width: 766px) {
