(dashboard-drawer) reponsiveness fixed

--- a/src/Pages/Dashboard/Components/DashboardBody/DashboardBody/DashboardBody.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/DashboardBody/DashboardBody.module.css
@@ -34,3 +34,12 @@
 .dashboardBodyContainer::-webkit-scrollbar-thumb:active {
   background: rgb(114, 114, 114);
 }
+@media only screen and (max-width: 1099px) {
+  .dashboardBodyContainer {
+    width: 100%;
+  }
+  .dashboardBody {
+    width: 100%;
+    padding: 0 1rem;
+  }
+}
