--- a/src/Pages/Dashboard/Components/Drawer/Components/DrawerOptions/DrawerOptions.module.css
+++ b/src/Pages/Dashboard/Components/Drawer/Components/DrawerOptions/DrawerOptions.module.css
@@ -78,7 +78,7 @@
   transition-delay: 0ms;
 }
 
-@media only screen and (max-width: 1099px) and (min-width: 766px) {
+@media only screen and (max-width: 1099px) {
   .btnBottom {
     right: 1rem;
     top: 50%;
