--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,7 @@ body {
     filter: drop-shadow(0px 0px 5px rgba(141, 141, 141, 0.616)) brightness(1.1);
   }
   html::-webkit-scrollbar {
+    position: absolute;
     width: 8px;
   }
 
