--- a/src/Pages/MainContent/Pages/Discover/Components/DiscoverBanner/DiscoverBanner/DiscoverBanner.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/DiscoverBanner/DiscoverBanner/DiscoverBanner.module.css
@@ -1,7 +1,6 @@
 .banner {
   position: relative;
-  margin-top: 5rem;
-  margin-bottom: 5rem;
+  margin: 5rem 0;
   user-select: none;
 }
 
@@ -17,5 +16,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+  .banner {
+    margin-top: 2rem;
   }
 }
