--- a/src/Pages/MainContent/Pages/Discover/Components/EventGames/Components/EventGamesGamesColumn/EventGamesGamesColumn.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/EventGames/Components/EventGamesGamesColumn/EventGamesGamesColumn.module.css
@@ -17,6 +17,7 @@
   margin-bottom: 2rem;
 }
 .heading button {
+  position: relative;
   border: 1px solid rgba(156, 156, 156, 0.6);
   background-color: black;
   color: white;
