(discover-games-slider) margin fixed

--- a/src/Pages/MainContent/Pages/Discover/Components/DiscoverGames/Components/DiscoverGamesCards/DiscoverGamesCards.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/DiscoverGames/Components/DiscoverGamesCards/DiscoverGamesCards.module.css
@@ -1,12 +1,19 @@
 .Cards {
-    margin-top: 2rem;
-    padding: 20px 0;
-    overflow: hidden;
-    width: 100%;
+  margin-top: 2rem;
+  padding: 20px 0;
+  overflow: hidden;
+  width: 100%;
 }
 
 .CardSlider {
-    list-style: none;
-    position: relative;
-    display: flex;
+  list-style: none;
+  position: relative;
+  display: flex;
+}
+.transition {
+  transition: translate 300ms;
+}
+
+.card {
+  flex-shrink: 0;
 }
