--- a/src/Pages/MainContent/Pages/Discover/Components/DiscoverBanner/Components/DiscoverBannerButtons/DiscoverBannerButtons.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/DiscoverBanner/Components/DiscoverBannerButtons/DiscoverBannerButtons.module.css
@@ -22,16 +22,31 @@
 
 @media only screen and (max-width: 768px) {
   .btn {
-    top: calc(50% - 2rem);
+    top: 50%;
+    translate: 0 -50%;
   }
 
   .nextBtn {
-    left: calc(100% - 2rem);
+    left: auto;
+    right: 0%;
     rotate: 90deg;
   }
 
   .prevBtn {
     left: 0%;
     rotate: -90deg;
+  }
+}
+
+@media only screen and (max-width: 528px) {
+  .btn {
+    width: 1.5rem;
+    height: 1.5rem;
+  }
+}
+@media only screen and (max-width: 364px) {
+  .btn {
+    width: 1rem;
+    height: 1rem;
   }
 }
