--- a/src/Pages/Dashboard/Components/DashboardBody/DashboardBody/DashboardBody.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/DashboardBody/DashboardBody.module.css
@@ -1,7 +1,15 @@
-.dashboardBodyContainer {
+.dashboardBodyScrollContainer {
   flex-grow: 1;
-  overflow-y: auto;
+  position: relative;
+  overflow: hidden;
+  height: 100%;
+}
+.dashboardBodyContainer {
+  height: 100%;
   padding: 1rem 0;
+  overflow-y: scroll;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 .dashboardBody {
   width: 75vw;
@@ -13,26 +21,7 @@
 }
 
 .dashboardBodyContainer::-webkit-scrollbar {
-  width: 8px;
-}
-
-.dashboardBodyContainer::-webkit-scrollbar-track {
-  background: #121212;
-}
-
-.dashboardBodyContainer::-webkit-scrollbar-thumb {
-  background: #474747;
-  border-radius: 5px;
-  opacity: 0;
-}
-
-.dashboardBodyContainer::-webkit-scrollbar-thumb:hover {
-  background: rgb(82, 82, 82);
-  opacity: 0;
-}
-
-.dashboardBodyContainer::-webkit-scrollbar-thumb:active {
-  background: rgb(114, 114, 114);
+  display: none;
 }
 @media only screen and (max-width: 1099px) {
   .dashboardBodyContainer {
