--- a/src/Pages/Dashboard/Components/Drawer/Drawer/Drawer.module.css
+++ b/src/Pages/Dashboard/Components/Drawer/Drawer/Drawer.module.css
@@ -13,6 +13,11 @@
   position: relative;
   overflow: hidden;
 }
+.drawerScrollContainer {
+  margin-top: 3rem;
+  position: relative;
+  height: calc(100% - 3rem);
+}
 .containerCollapse {
   width: 3.2rem;
 }
@@ -22,13 +27,17 @@
   top: 0;
   left: 0;
   width: 240px;
-  margin-top: 3rem;
   height: calc(100vh - 72px - 3rem);
+  overflow-y: scroll;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
   display: flex;
   flex-direction: column;
-  align-items: start;
-  overflow-y: hidden;
-  overflow-x: visible;
+  justify-content: space-between;
+}
+
+.scrollDrawer::-webkit-scrollbar {
+  display: none;
 }
 .optionContainer {
   flex-grow: 1;
