--- a/src/Shared/ScrollBar/ScrollBar.module.css
+++ b/src/Shared/ScrollBar/ScrollBar.module.css
@@ -1,10 +1,15 @@
-.scrollBarContainer {
+.scrollBarContainers {
   height: 100%;
   width: 10%;
   max-width: 20px;
   min-width: 8px;
   position: absolute;
+  user-select: none;
+  top: 0;
   right: 0;
+}
+.noHeight {
+  display: none;
 }
 .scrollThumb {
   width: 8px;
@@ -16,7 +21,12 @@
   outline: 0;
   border: 0;
   user-select: none;
+  opacity: 0;
+  transition: opacity 200ms;
 }
 .scrollThumb:hover {
   background: rgb(82, 82, 82);
+}
+.show {
+  opacity: 1;
 }
