(discover page) bug fixing

--- a/src/Pages/MainContent/Pages/Discover/Components/DiscoverBanner/Components/DiscoverBannerButtons/DiscoverBannerButtons.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/DiscoverBanner/Components/DiscoverBannerButtons/DiscoverBannerButtons.module.css
@@ -28,12 +28,12 @@
 
   .nextBtn {
     left: auto;
-    right: 0%;
+    right: 5px;
     rotate: 90deg;
   }
 
   .prevBtn {
-    left: 0%;
+    left: 5px;
     rotate: -90deg;
   }
 }
