--- a/src/Pages/MainContent/Pages/Discover/Components/DiscoverBanner/Components/DiscoverBannerInfoItem/DiscoverBannerInfoItem.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/DiscoverBanner/Components/DiscoverBannerInfoItem/DiscoverBannerInfoItem.module.css
@@ -1,120 +1,117 @@
 .itemInfo {
-    visibility: hidden;
-    position: absolute;
-    bottom: 40%;
-    left: 2%;
+  visibility: hidden;
+  position: absolute;
+  bottom: 40%;
+  left: 2%;
 }
 
 .itemInfoHide {
-    z-index: 0;
-    opacity: 0;
-    visibility: hidden;
+  z-index: 0;
+  opacity: 0;
+  visibility: hidden;
 }
 
 .logoImg {
-    width: 10vw;
-    max-width: 13rem;
+  width: 10vw;
+  max-width: 13rem;
 }
 
+.priceContainer {
+  display: flex;
+  white-space: nowrap;
+  font-size: 1vw;
+}
 .price {
-    display: flex;
-    white-space: nowrap;
-    font-size: 1vw;
+  margin-left: 5px;
 }
 
-.space {
-    margin-right: 5px;
-    display: inline-block;
-}
 #initialBanner {
-    opacity: 1;
-    z-index: 1;
-    visibility: visible;
+  opacity: 1;
+  z-index: 1;
+  visibility: visible;
 }
 
 #bannerFadeIn {
-    opacity: 0;
-    z-index: 1;
-    visibility: visible;
-    animation: 200ms cubic-bezier(0.17, 0.17, 0.23, 1) 300ms 1 normal forwards
-        running fadeIn;
+  opacity: 0;
+  z-index: 1;
+  visibility: visible;
+  animation: 200ms cubic-bezier(0.17, 0.17, 0.23, 1) 300ms 1 normal forwards running fadeIn;
 }
 
 #bannerFadeOut {
-    opacity: 0;
-    visibility: hidden;
-    animation: 100ms cubic-bezier(0.69, 0, 0.83, 0.83) 0s 1 normal forwards
-        running fadeout;
+  opacity: 0;
+  visibility: hidden;
+  animation: 100ms cubic-bezier(0.69, 0, 0.83, 0.83) 0s 1 normal forwards running fadeout;
 }
 
 @keyframes fadeout {
-    0% {
-        transform: translateX(0);
-        opacity: 1;
-        visibility: visible;
-    }
+  0% {
+    transform: translateX(0);
+    opacity: 1;
+    visibility: visible;
+  }
 
-    100% {
-        transform: translateX(-150px);
-        opacity: 0;
-        visibility: hidden;
-    }
+  100% {
+    transform: translateX(-150px);
+    opacity: 0;
+    visibility: hidden;
+  }
 }
 
 @keyframes fadeIn {
-    0% {
-        opacity: 0;
-        transform: translateX(150px);
-    }
+  0% {
+    opacity: 0;
+    transform: translateX(150px);
+  }
 
-    100% {
-        transform: translateX(0);
-        opacity: 1;
-    }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
 }
 
 @media only screen and (max-width: 768px) {
-    .logoImg {
-        width: 30vw;
-        height: auto;
+  .logoImg {
+    width: 30vw;
+    height: auto;
+  }
+
+  .itemInfo {
+    bottom: 10%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .price {
+    font-size: 14px;
+  }
+
+  @keyframes fadeout {
+    0% {
+      opacity: 1;
     }
 
-    .itemInfo {
-        bottom: 10%;
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+    100% {
+      opacity: 0;
+    }
+  }
+
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
     }
 
-    .price {
-        font-size: 14px;
+    100% {
+      opacity: 1;
     }
-
-    @keyframes fadeout {
-        0% {
-            opacity: 1;
-        }
-
-        100% {
-            opacity: 0;
-        }
-    }
-
-    @keyframes fadeIn {
-        0% {
-            opacity: 0;
-        }
-
-        100% {
-            opacity: 1;
-        }
-    }
+  }
 }
 
 @media (min-width: 2134px) {
-    .price {
-        font-size: 16px;
-    }
+  .price {
+    font-size: 16px;
+  }
 }
