--- a/src/Pages/MainContent/Pages/Discover/Components/DiscoverBanner/DiscoverBanner/DiscoverBanner.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/DiscoverBanner/DiscoverBanner/DiscoverBanner.module.css
@@ -2,6 +2,7 @@
   position: relative;
   margin: 5rem 0;
   user-select: none;
+  width: 100%;
 }
 
 .bannerOverflow {
@@ -11,7 +12,7 @@
 
 @media only screen and (max-width: 768px) {
   .bannerOverflow {
-    width: 100vw;
+    width: 100%;
     aspect-ratio: 1/1.0675;
     display: flex;
     justify-content: center;
