--- a/src/Shared/SelectionField/SelectionField.module.css
+++ b/src/Shared/SelectionField/SelectionField.module.css
@@ -64,11 +64,10 @@
   border: 2px solid rgba(1, 81, 185, 0.733);
 }
 
-.list {
+.listContainer {
   position: absolute;
   width: 100%;
   border-radius: 4px;
-  padding: 10px 10px 0px 10px;
   background-color: rgb(37, 37, 37);
   cursor: default;
   list-style: none;
@@ -77,7 +76,17 @@
   transition: opacity 200ms;
   z-index: 1;
   max-height: 410px;
+}
+.listScrollContainer {
+  position: relative;
+  padding: 10px 10px 0px 10px;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
   overflow-y: auto;
+  height: 100%;
+}
+.list::-webkit-scrollbar {
+  display: none;
 }
 
 .showBottom {
