--- a/src/Shared/SelectionField/SelectionField.module.css
+++ b/src/Shared/SelectionField/SelectionField.module.css
@@ -84,6 +84,7 @@
   scrollbar-width: none;
   overflow-y: auto;
   height: 100%;
+  max-height: 410px;
 }
 .list::-webkit-scrollbar {
   display: none;
