--- a/src/Shared/ScrollBar/ScrollBar.module.css
+++ b/src/Shared/ScrollBar/ScrollBar.module.css
@@ -18,15 +18,16 @@
   position: absolute;
   right: 0;
   border-radius: 4px;
-  transition: background-color 100ms;
   outline: 0;
   border: 0;
   user-select: none;
   opacity: 0;
-  transition: opacity 200ms;
+  transition:
+    background-color 200ms,
+    opacity 200ms;
 }
 .scrollThumb:hover {
-  background: rgb(82, 82, 82);
+  background-color: rgb(90, 90, 90);
 }
 .show {
   opacity: 1;
