--- a/src/Pages/Dashboard/Components/Drawer/Drawer/Drawer.module.css
+++ b/src/Pages/Dashboard/Components/Drawer/Drawer/Drawer.module.css
@@ -57,12 +57,13 @@
   width: 2rem;
   height: 2rem;
   position: absolute;
-  top: 0.5rem;
+  top: 0;
   cursor: pointer;
   background-color: rgba(255, 255, 255, 0.2);
   border: none;
   border-radius: 50%;
   box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.5);
+  z-index: 2;
 }
 .containerTransition .collapseButton {
   transition: right 300ms linear;
@@ -185,7 +186,7 @@
     width: 100%;
     height: calc(100vh - 72px);
     background-color: #18181c;
-    z-index: 1;
+    z-index: 2;
     transform-origin: 0 0;
     translate: -100%;
   }
