--- a/src/Pages/Dashboard/Components/DashboardBody/Components/AllGames/AllGames/AllGames.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/AllGames/AllGames/AllGames.module.css
@@ -1,3 +1,9 @@
 .allGames {
   width: 100%;
 }
+.paginationContainer {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding: 1rem 0;
+}
