--- a/src/Pages/Dashboard/Components/DashboardBody/Components/AllGames/Components/AllGamesBody/AllGamesBody.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/AllGames/Components/AllGamesBody/AllGamesBody.module.css
@@ -1,2 +1,33 @@
-.allGamesBody {
+.cardsContainer {
+  list-style: none;
+  display: grid;
+  padding: 10px 5px;
+  grid-template-columns: repeat(6, 1fr);
+  gap: 3rem 1rem;
+}
+
+@media only screen and (max-width: 1600px) and (min-width: 769px) {
+  .cardsContainer {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+@media only screen and (max-width: 768px) and (min-width: 553px) {
+  .cardsContainer {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media only screen and (max-width: 552px) and (min-width: 250px) {
+  .cardsContainer {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media only screen and (max-width: 340px) {
+  .cardsContainer {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+@media only screen and (max-width: 1099px) {
+  .allGamesBody {
+    padding: 0 0.5rem;
+  }
 }
