--- a/src/Pages/Dashboard/Components/DashboardBody/Components/AllGames/Components/AllGamesBody/Components/CardDot/CardDot.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/AllGames/Components/AllGamesBody/Components/CardDot/CardDot.module.css
@@ -1,3 +1,6 @@
+#show {
+  opacity: 1;
+}
 .btnDot {
   width: 100%;
   height: 100%;
@@ -13,4 +16,37 @@
 }
 .btnDot:active {
   background-color: rgba(0, 0, 0, 0.4);
+}
+.listContainer {
+  position: absolute;
+  list-style: none;
+  background-color: #18181c;
+  padding: 5px;
+  border-radius: 4px;
+  top: calc(100% + 5px);
+  left: 50%;
+  translate: -50%;
+}
+.listContainer li {
+  font-size: 14px;
+  color: rgba(255, 255, 255, 0.726);
+  text-align: center;
+  text-wrap: nowrap;
+  margin: 5px 0;
+  transition: color 200ms;
+}
+.listContainer li:hover {
+  color: rgba(255, 255, 255, 0.9);
+}
+.listContainer li::after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 2px;
+  background-color: #2e2e33;
+  margin-top: 5px;
+  transition: background-color 200ms;
+}
+.listContainer li:hover::after {
+  background-color: #4e4e57;
 }
