cursor:pointer bug on touch screen fixed

--- a/src/Pages/Dashboard/Components/DashboardBody/Components/AllGames/Components/AllGamesHeader/AllGamesHeader.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/AllGames/Components/AllGamesHeader/AllGamesHeader.module.css
@@ -1,6 +1,11 @@
+.headerText {
+  padding: 1rem 0;
+}
+.searchFieldContainer {
+  height: 40px;
+}
 .allGamesHeader {
   margin-bottom: 2rem;
-  height: 40px;
 }
 .searchField {
   position: relative;
