--- a/src/Pages/Dashboard/Components/Drawer/Components/DrawerOptions/DrawerOptions.module.css
+++ b/src/Pages/Dashboard/Components/Drawer/Components/DrawerOptions/DrawerOptions.module.css
@@ -1,9 +1,4 @@
-.outerOptionContainer {
-  cursor: pointer;
-}
-
 .optionButton {
-  cursor: pointer;
   background: transparent;
   border: none;
   text-align: left;
@@ -85,5 +80,11 @@
   }
   .outerOptionCollapse {
     padding: 0.6rem 0 0.6rem 0;
+  }
+}
+@media (hover: hover) and (pointer: fine) {
+  .optionButton,
+  .innerOption {
+    cursor: pointer;
   }
 }
