--- a/src/Pages/Dashboard/Components/DashboardBody/Components/AllGames/Components/AllGamesBody/Components/CardDot/CardDot.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/AllGames/Components/AllGamesBody/Components/CardDot/CardDot.module.css
@@ -21,13 +21,16 @@
   position: absolute;
   list-style: none;
   background-color: #18181c;
-  padding: 5px;
+  padding: 5px 10px;
   border-radius: 4px;
   top: calc(100% + 5px);
   left: 50%;
   translate: -50%;
 }
-.listContainer li {
+.listContainer li button {
+  width: 100%;
+  background-color: transparent;
+  border: none;
   font-size: 14px;
   color: rgba(255, 255, 255, 0.726);
   text-align: center;
@@ -35,10 +38,11 @@
   margin: 5px 0;
   transition: color 200ms;
 }
-.listContainer li:hover {
+
+.listContainer li button:hover {
   color: rgba(255, 255, 255, 0.9);
 }
-.listContainer li::after {
+.listContainer li button::after {
   content: '';
   display: block;
   width: 100%;
@@ -47,6 +51,11 @@
   margin-top: 5px;
   transition: background-color 200ms;
 }
-.listContainer li:hover::after {
+.listContainer li button:hover::after {
   background-color: #4e4e57;
+}
+@media (hover: hover) and (pointer: fine) {
+  .listContainer li button {
+    cursor: pointer;
+  }
 }
