--- a/src/Shared/DiscountPrice/DiscountPrice.module.css
+++ b/src/Shared/DiscountPrice/DiscountPrice.module.css
@@ -4,15 +4,12 @@
   color: rgb(226, 226, 226);
   text-align: right;
   display: flex;
-  justify-content: flex-end;
   align-items: center;
   flex-wrap: wrap;
+  gap: 0 5px;
 }
 
 .regular {
   color: rgb(145, 145, 145);
   display: inline-block;
-}
-.discount {
-  margin-left: 5px;
 }
