--- a/src/Pages/Dashboard/Components/DashboardBody/Components/DashboardModal/DashbboardModal/DashboardModal.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/DashboardModal/DashbboardModal/DashboardModal.module.css
@@ -48,6 +48,9 @@
   .dashboardModal {
     padding: 1rem;
   }
+  .card {
+    flex-direction: column;
+  }
   .header {
     font-size: 1.2rem;
   }
@@ -56,7 +59,6 @@
   }
   .name {
     font-size: 12px;
-    word-break: break-all;
   }
   .price {
     font-size: 12px;
