--- a/src/Shared/Modal/Modal.module.css
+++ b/src/Shared/Modal/Modal.module.css
@@ -1,16 +1,30 @@
 .modal {
   max-width: 100%;
   min-width: 60%;
+  max-height: 100%;
   position: absolute;
   top: 50%;
   left: 50%;
   translate: -50% -50%;
   background-color: #18181c;
-  padding: 2rem;
   z-index: 3;
+  display: flex;
   border-radius: 0.5rem;
   box-shadow: 0 0 10px 0 #000000;
   animation: show 200ms forwards;
+}
+.modalScrollContainer {
+  width: 100%;
+  max-height: 100%;
+  overflow-y: auto;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+.modalScrollContainer ::-webkit-scrollbar {
+  display: none;
+}
+.modalContentContainer {
+  padding: 2rem;
 }
 .hide {
   animation: hide 200ms forwards;
@@ -87,13 +101,15 @@
 }
 
 @media only screen and (max-width: 768px) {
-  .dashboardModal {
+  .modal {
     min-width: 90%;
   }
 }
 @media only screen and (max-width: 364px) {
-  .dashboardModal {
+  .modal {
     width: 100%;
+  }
+  .modalContentContainer {
     padding: 1rem;
   }
 }
