--- a/src/Pages/MainContent/MainContent/MainContent.module.css
+++ b/src/Pages/MainContent/MainContent/MainContent.module.css
@@ -12,8 +12,14 @@
   z-index: 0;
 }
 
-@media (max-width: 1023px) {
+@media only screen and (max-width: 1023px) {
   .main {
     width: 100%;
+    padding: 0 1rem;
+  }
+}
+@media only screen and (max-width: 264px) {
+  .main {
+    padding: 0 3px;
   }
 }
